@@ -38,14 +38,15 @@
 #define MAXZOOM 25
 #define MINZOOM -25
 
-enum coordSources {NONE, FROMIMGPNT, FROMIMGBOX, FROMIMGSHAPE, FROMREFPNT, FROMUSERPNT, FROMUSERBOX, FROMUSERSHAPE, FROMBUF, FROMSCALE};
+enum coordSources {NONE, FROMIMGPNT, FROMIMGBOX, FROMIMGSHAPE, FROMREFPNT, FROMUSERPNT, FROMUSERBOX, FROMUSERSHAPE, FROMBUF, FROMSCALE, FROMTILE};
 
 enum modes {BROWSE, ZOOMIN, ZOOMOUT, MAP, LEGEND, LEGENDICON, REFERENCE, SCALEBAR, COORDINATE, 
             QUERY, QUERYMAP, NQUERY, NQUERYMAP, 
             ITEMQUERY, ITEMQUERYMAP, ITEMNQUERY, ITEMNQUERYMAP, 
             FEATUREQUERY, FEATUREQUERYMAP, FEATURENQUERY, FEATURENQUERYMAP, 
-            ITEMFEATUREQUERY, ITEMFEATUREQUERYMAP,ITEMFEATURENQUERY,ITEMFEATURENQUERYMAP,
-            INDEXQUERY,INDEXQUERYMAP};
+            ITEMFEATUREQUERY, ITEMFEATUREQUERYMAP, ITEMFEATURENQUERY, ITEMFEATURENQUERYMAP,
+            INDEXQUERY, INDEXQUERYMAP, TILE};
+
 
 /*! \srtuct mapservObj
  *  \brief Global structur used by template and mapserv
@@ -92,6 +93,11 @@ typedef struct
 
    /* can be BROWSE, QUERY, etc. */
    int Mode; 
+   
+   /* can be SPHEREMERC */
+   int TileMode;
+   /* three integral coordinates, X, Y, Zoom */
+   long *TileCoords;
    
    /* big enough for time + pid */
    char Id[IDSIZE]; 
